--- a/mcp.json.example
+++ b/mcp.json.example
@@ -6,7 +6,8 @@
                 "你的绝对地址/instant-meshes-mcp/server.py"
             ],
             "env": {
-                "PYTHONUNBUFFERED": "1"
+                "PYTHONUNBUFFERED": "1",
+                "BLENDER_PATH":"your_blender3.6_abs_dir"
             }
         }
     }
